Changed title and colors

--- a/Index.html
+++ b/Index.html
@@ -24,13 +24,13 @@
             Out of Stock </span
           ><button
             @click="product.qty++"
-            class="bg-green-400 rounded  text-white px-2 ml-16"
+            class="bg-blue-400 rounded  text-white px-2 ml-16"
           >
             +</button
           ><button
             v-if="product.qty > 0"
             @click="product.qty--"
-            class="bg-red-400 rounded  text-white px-2 ml-1"
+            class="bg-orange-400 rounded  text-white px-2 ml-1"
           >
             -
           </button>
